--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+img {
+  max-height: 100%;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,4 +28,53 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+input, textarea {
+  @apply border border-gray-300 rounded-md px-1 w-full;
+  @apply mb-2
+}
+
+input:focus {
+  @apply border-blue-900;
+}
+
+h1 {
+  @apply text-blue-900 mb-2 text-xl;
+}
+
+label {
+  @apply text-blue-900;
+}
+
+.btn-primary {
+  @apply bg-blue-900 text-white px-4 py-1 rounded-md;
+}
+
+.btn-red {
+  @apply bg-red-800 text-white;
+}
+
+.btn-default {
+  @apply bg-gray-400 text-white;
+}
+
+.btn-red, .btn-default {
+  @apply px-4 py-1 rounded-md
+}
+
+table.basic {
+  @apply w-full;
+}
+
+table.basic thead tr td {
+  @apply bg-blue-100;
+}
+
+table.basic tr td {
+  @apply border border-blue-200 p-1;
+}
+
+table.basic a {
+  @apply bg-blue-900 text-white text-sm py-1 px-2 rounded-md inline-flex gap-1 mr-1;
 }
