--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@ body {
 }
 
 input, textarea {
-  @apply border border-gray-300 rounded-md px-1 w-full;
+  @apply border text-black border-gray-300 rounded-md px-1 w-full;
   @apply mb-2
 }
 
@@ -64,7 +64,7 @@ label {
 }
 
 table.basic {
-  @apply w-full;
+  @apply w-full text-black;
 }
 
 table.basic thead tr td {
